main/log/build_2020-07-11_23-46-56/main/stderr.log
/Users/mukuyo/RI-AI/src/main/src/main.cpp:17:44: error: no matching literal operator for call to 'operator""s' with argument of type 'unsigned long long' or 'const char *', and no matching literal operator template
    auto timer_ = this->create_wall_timer(1s, std::bind(&Main::timer_callback, this));
                                           ^
/Users/mukuyo/RI-AI/src/main/src/main.cpp:24:67: warning: unused parameter 'vision_message' [-Wunused-parameter]
  void callback(const message_info::msg::RobotCommands::SharedPtr vision_message) {
                                                                  ^
1 warning and 1 error generated.
make[2]: *** [CMakeFiles/main.dir/src/main.cpp.o] Error 1
make[1]: *** [CMakeFiles/main.dir/all] Error 2
make: *** [all] Error 2
